--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,34 @@
-version: '3.8'
+version: "3.8"
+
 services:
-  php-apache-environment:
-    container_name: php-apache
+  app:
     build:
-      context: ./php
+      context: ./php-docker
       dockerfile: Dockerfile
-    depends_on:
-      - db
+    image: php_demo
+    container_name: php_demo
+    ports:
+      - "8088:80" # "8080:80" - if you want to use the port 80
     volumes:
-      - ./php/src:/var/www/html/
-    ports:
-      - 9010:80
+      # Mount source-code for development
+      - ./php-docker/src:/var/www
+    extra_hosts:
+      - host.docker.internal:host-gateway
   db:
-    container_name: db
-    image: mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: MYSQL_ROOT_PASSWORD
-      MYSQL_DATABASE: MYSQL_DATABASE
-      MYSQL_USER: MYSQL_USER
-      MYSQL_PASSWORD: MYSQL_PASSWORD
+    image: mysql:8
+    container_name: php_demo_db
     ports:
-      - "9906:3306"
+      - "3306:3306"
+    volumes:
+      - mysql-data:/var/lib/mysql
+      - ./php-docker/mysql-config.cnf:/etc/mysql/conf.d/config.cnf
+    restart: 'always'
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: phpmvc
+      MYSQL_USER: phpmvc
+      MYSQL_PASSWORD: phpmvc
+
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
@@ -31,3 +38,7 @@ services:
       PMA_HOST: db
     depends_on:
       - db
+#Volumes
+volumes:
+  mysql-data:
+    driver: local
